--- a/css/modal.css
+++ b/css/modal.css
@@ -11,6 +11,7 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow: auto;
 }
 
 /* Modal Content */
@@ -30,6 +31,7 @@
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
     animation-duration: 0.4s
+    overflow: auto;
 }
 
 /* Add Animation */
@@ -69,6 +71,7 @@
 .modal-body {
     padding: 2px 16px;
     background-color: #121212;
+    overflow: auto;
 }
 
 .modal-footer {
