--- a/css/events.css
+++ b/css/events.css
@@ -1,11 +1,12 @@
 .event-ul {
 	text-decoration: none;
 	list-style: none;
+	border: none;
 }
 .event-list {
 	text-decoration: none;
 	color: white;
-	font-size: 30px;
+	font-size: 20px;
 	margin-top: 10px;
 }
 
