About and legacy modals added, close button resolved, floating menu items

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@ body {
     to {-moz-transform: translate(-50%, 0%);}    
 }
 
+.marginLeft {
+	padding-left: 20px;
+}
+
 .scaling{
 	float: left;
 	-webkit-animation-name: scalex;
