--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,129 @@
+/********Horizontal Menu*********/
+.floath1 {
+  -webkit-animation-name: Floatingxh1;
+    -webkit-animation-duration: 16s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    -moz-animation-name: Floatingh1;
+    -moz-animation-duration: 16s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: ease-in-out;
+}
+@-webkit-keyframes Floatingxh1{
+    from {-webkit-transform:translate(0%, 0%);}
+    50% {-webkit-transform:translate(10%, -10%);}
+    to {-webkit-transform: translate(0%, 0%);    }    
+}
+    
+@-moz-keyframes Floatingh1{
+    from {-moz-transform:translate(0%, 0%);}
+    50% {-moz-transform:translate(10%, -10%);}
+    to {-moz-transform: translate(0%, 0%);}    
+}
+
+
+.floath2 {
+  -webkit-animation-name: Floatingxh2;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    -moz-animation-name: Floatingh2;
+    -moz-animation-duration: 10s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: ease-in-out;
+}
+@-webkit-keyframes Floatingxh2{
+    from {-webkit-transform:translate(0%, 0%);}
+    50% {-webkit-transform:translate(10%, 5%);}
+    to {-webkit-transform: translate(0%, 0%);    }    
+}
+    
+@-moz-keyframes Floatingh2{
+    from {-moz-transform:translate(0%, 0%);}
+    50% {-moz-transform:translate(10%, 5%);}
+    to {-moz-transform: translate(0%, 0%);}    
+}
+
+.floath3 {
+  -webkit-animation-name: Floatingxh3;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    -moz-animation-name: Floatingh3;
+    -moz-animation-duration: 8s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: ease-in-out;
+}
+@-webkit-keyframes Floatingxh3{
+    from {-webkit-transform:translate(0%, 0%);}
+    50% {-webkit-transform:translate(10%, 10%);}
+    to {-webkit-transform: translate(0%, 0%);    }    
+}
+    
+@-moz-keyframes Floatingh3{
+    from {-moz-transform:translate(0%, 0%);}
+    50% {-moz-transform:translate(10%, 10%);}
+    to {-moz-transform: translate(0%, 0%);}    
+}
+
+.floath4 {
+  -webkit-animation-name: Floatingxh4;
+    -webkit-animation-duration: 17s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    -moz-animation-name: Floatingh4;
+    -moz-animation-duration: 17s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: ease-in-out;
+}
+@-webkit-keyframes Floatingxh4{
+    from {-webkit-transform:translate(0%, 0%);}
+    50% {-webkit-transform:translate(10%, -10%);}
+    to {-webkit-transform: translate(0%, 0%);    }    
+}
+    
+@-moz-keyframes Floatingh4{
+    from {-moz-transform:translate(0%, 0%);}
+    50% {-moz-transform:translate(10%, -10%);}
+    to {-moz-transform: translate(0%, 0%);}    
+}
+
+.floath5 {
+  -webkit-animation-name: Floatingxh5;
+    -webkit-animation-duration: 14s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    -moz-animation-name: Floatingh5;
+    -moz-animation-duration: 14s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: ease-in-out;
+}
+@-webkit-keyframes Floatingxh5{
+    from {-webkit-transform:translate(0%, 0%);}
+    50% {-webkit-transform:translate(10%, -7%);}
+    to {-webkit-transform: translate(0%, 0%);    }    
+}
+    
+@-moz-keyframes Floatingh5{
+    from {-moz-transform:translate(00%, 0%);}
+    50% {-moz-transform:translate(10%, -7%);}
+    to {-moz-transform: translate(0%, 0%);}    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*************Sidebar***************/
 #sidebar-container{
