--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,10 @@
     src: url(../fonts/quarca-norm-thin.otf);
 }
 
-body {
+body,html {
 	margin: 0;
+	padding: 0;
+	overflow: hidden;
 }
 #textDiv {
 	position: absolute;
