--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,23 @@ body,html {
 	text-align: center;
 }
 
+.no-decoration,
+.no-decoration:link,
+.no-decoration:hover,
+.no-decoration:active,
+.no-decoration:visited {
+	color: white;
+	text-decoration: none;
+}
+
 #controlDiv {
 	position: absolute;
-	display: block;
-	left: 80%;/*
+	display: inline !important;
+	top: 1% !important;
+	left: 90%;/*
 	-webkit-transform: translate(-50%, 0%);
 	-moz-transform: translate(-50%, 0%);*/
-	font-size: 20px;
+	font-size: 30px;
 	color: #ffffff;
 	font-family: "Quarca";
 	text-shadow: 0 0 0.4em #87F, 0 0 0.4em #87F, 0 0 0.4em #87F;
