--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body,html {
 	text-decoration: none;
 }
 
-#controlDiv {
+#accomodationDiv {
 	position: absolute;
 	display: inline !important;
 	top: 1% !important;
