New menu text-shadow for visited link in horizontal menu

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ body,html {
 	left: 0%;
 }
 
+.lowermenusound:hover {
+	text-shadow: 0 0 2.8em #87F, 0 0 2.8em #87F, 0 0 2.8em #87F !important;
+}
+
 .align-center {
 	text-align: center;
 }
