--- a/css/left-side-menu.css
+++ b/css/left-side-menu.css
@@ -50,7 +50,7 @@
     font-size: 4vh;
     color: #DADADA;
     font-family: "Quarca";
-    text-shadow: #4DD6E4 0 0 10px, #4DD6E4 0px 0px 5px;
+    text-shadow: 0 0 0.4em #87F, 0 0 0.4em #87F, 0 0 0.4em #87F;
     z-index: 510;
 }
 
