Event names added

--- a/css/left-side-menu.css
+++ b/css/left-side-menu.css
@@ -47,7 +47,7 @@
     position: relative;
     top: 40px;
     left: 10px;
-    font-size: 4vh;
+    font-size: 20px;
     color: #DADADA;
     font-family: "Quarca";
     text-shadow: 0 0 0.4em #87F, 0 0 0.4em #87F, 0 0 0.4em #87F;
