--- a/css/events-nav.css
+++ b/css/events-nav.css
@@ -116,9 +116,10 @@
 
 .btn{
   font-size: 20px;
-  background-color: black;
+  /*background-color: black;*/
   border-radius: 0px;
   padding: 8px;
+  color: white;
 }
 
 .btn:hover {
