--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,29 @@ body,html {
     
 @-moz-keyframes Floating{
     from {-moz-transform:translate(-50%, 0%);}
-    65% {-moz-transform:translate(-50%, 2%);}
+    65% {-moz-transform:translate(-50%, 40%);}
+    to {-moz-transform: translate(-50%, 0%);}    
+}
+
+.float-acc {
+	-webkit-animation-name: Floatingxacc;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    -moz-animation-name: Floatingacc;
+    -moz-animation-duration: 10s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: ease-in-out;
+}
+@-webkit-keyframes Floatingxacc{
+    from {-webkit-transform:translate(-50%, 0%);}
+    50% {-webkit-transform:translate(-50%, 20%);}
+    to {-webkit-transform: translate(-50%, 0%);    }    
+}
+    
+@-moz-keyframes Floatingacc{
+    from {-moz-transform:translate(-50%, 0%);}
+    65% {-moz-transform:translate(-50%, 20%);}
     to {-moz-transform: translate(-50%, 0%);}    
 }
 
