--- a/css/left-side-menu.css
+++ b/css/left-side-menu.css
@@ -45,8 +45,8 @@
 
 .dates{
     position: relative;
-    top: 40px;
-    left: 10px;
+    top: 10px;
+    left: 30px;
     font-size: 20px;
     color: #DADADA;
     font-family: "Quarca";
@@ -56,7 +56,9 @@
 
 #main-logo{
     cursor: pointer;
-    width: 60%;
+    width: 30%;
+    margin-top: 5%;
+    margin-left: 5%;
 }
 
 .vs-cover{
