--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body,html {
 	position: absolute;
 	display: inline !important;
 	top: 1% !important;
-	left: 90%;/*
+	left: 93%;/*
 	-webkit-transform: translate(-50%, 0%);
 	-moz-transform: translate(-50%, 0%);*/
 	font-size: 30px;
@@ -155,3 +155,7 @@ body,html {
 	text-decoration: none;
 }
 
+.pro-night-image {
+	width: 90%;
+	height: auto;
+}
