--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,12 @@ body,html {
 	color: #ffffff;
 	font-family: "Quarca";
 	text-shadow: 0 0 0.4em #87F, 0 0 0.4em #87F, 0 0 0.4em #87F;
-	cursor: hand;
 	bottom: 0%;
 	left: 0%;
+}
+
+.cursor-hand {
+	cursor: hand;
 }
 
 .lowermenusound:hover {
