--- a/css/menu.css
+++ b/css/menu.css
@@ -250,6 +250,7 @@ a:active { text-decoration: none; }
   font-size: 3vh;
   border-bottom: 1px solid rgba(69, 74, 84, 0.7);
   padding: 0;
+  cursor: hand;
 }
 
 #menu li ul {
