--- a/css/gallery.css
+++ b/css/gallery.css
@@ -307,7 +307,7 @@ li {
 }
 
 li img {
-  height: 70%;
+  height: 70vh;
   margin: 0 auto;
 }
 
@@ -355,13 +355,11 @@ li p {
   transform: scale(.75);
 }
 
-span {
-  
-}
+
 #button {
   color:white;
   width: 20%;
-  z-index: 1000;
+  z-index: 10000;
   position: absolute;
   left: 50%;
   top: 90%;
@@ -370,12 +368,12 @@ span {
 
 #prev {
   float: left;
-  cursor: hand;
+  cursor: pointer;
 }
 
 #next {
   float: right;
-  cursor: hand;
+  cursor: pointer;
 }
 
 
