--- a/css/events-nav.css
+++ b/css/events-nav.css
@@ -74,7 +74,7 @@
     display: flex;
     flex-wrap: wrap;
     font-size: 2rem;
-    padding-top: 2rem;
+    /*padding-top: 2rem;*/
     max-height: 50vh;
     text-align: justify;
 }
