Tab icon added , Sponsors updated

--- a/css/style.css
+++ b/css/style.css
@@ -203,4 +203,15 @@ body,html {
 }
 
 
+.sponsor-image img{
+    height: 100px;
+    /*width: auto;*/
+    max-width: 282px;
+}
+.sponsor-type {
+    font-size: 20px;
+}
+.sponsorInfo{
+	overflow: auto !important;
+}
 
